# gameboy-emulator

./: .gitignore  CMakeLists.txt  LICENSE
src/: bus.cpp  bus.h  cpu.cpp  cpu.h  cpu_cb.cpp  gb.cpp  gb.h  main.cpp
src/cartridges/: cartridge.cpp  cartridge.h
